# ai-hub

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  README.md
claude_agent_course/module_01_foundations/projects/project_01_hello_agent/: .env.example  CUSTOM_API_GUIDE.md  README.md  pyproject.toml
claude_agent_course/module_01_foundations/projects/project_01_hello_agent/solution/: __init__.py  agent.py  main.py
claude_agent_course/module_01_foundations/projects/project_01_hello_agent/src/: __init__.py  agent.py  main.py
claude_agent_course/module_01_foundations/projects/project_02_smart_assistant/: .env copy.example  README.md  pyproject.toml
claude_agent_course/module_01_foundations/projects/project_02_smart_assistant/solution/: __init__.py  assistant.py  main.py
claude_agent_course/module_01_foundations/projects/project_02_smart_assistant/src/: assistant.py  main.py
claude_agent_course/module_01_foundations/projects/project_03_advanced_agent/: .env.example  README.md  pyproject.toml  test_imports.py
claude_agent_course/module_01_foundations/projects/project_03_advanced_agent/solution/: agent.py  main.py
claude_agent_course/module_01_foundations/projects/project_03_advanced_agent/src/: __init__.py  agent.py  main.py
claude_agent_course/module_02_core_tools/projects/project_02_bash_automation/: .env.example  README.md  pyproject.toml
claude_agent_course/module_02_core_tools/projects/project_02_bash_automation/solution/: __init__.py  agent.py  main.py
claude_agent_course/module_02_core_tools/projects/project_02_bash_automation/src/: __init__.py  agent.py  main.py
claude_agent_course/module_03_custom_tools/projects/project_01_resume_analyzer/: README.md  pyproject.toml
claude_agent_course/module_03_custom_tools/projects/project_01_resume_analyzer/data/: sample_resume.txt
claude_agent_course/module_03_custom_tools/projects/project_01_resume_analyzer/solution/: __init__.py  agent.py  main.py  tools.py
claude_agent_course/module_03_custom_tools/projects/project_01_resume_analyzer/src/: __init__.py  agent.py  main.py  tools.py
claude_agent_course/module_03_custom_tools/projects/project_05_news_aggregator/: README.md  pyproject.toml
claude_agent_course/module_03_custom_tools/projects/project_05_news_aggregator/data/: articles.json
claude_agent_course/module_03_custom_tools/projects/project_05_news_aggregator/solution/: __init__.py  agent.py  main.py  tools.py
claude_agent_course/module_03_custom_tools/projects/project_05_news_aggregator/src/: __init__.py  agent.py  main.py  tools.py
claude_agent_course/module_04_skills/projects/project_04_pr_description_generator/: README.md  pyproject.toml
claude_agent_course/module_04_skills/projects/project_04_pr_description_generator/samples/: change_notes.txt
claude_agent_course/module_04_skills/projects/project_04_pr_description_generator/solution/: output_example.md
claude_agent_course/module_04_skills/projects/project_04_pr_description_generator/src/: __init__.py  agent.py  main.py
claude_agent_course/module_04_skills/projects/project_06_release_notes/: README.md  pyproject.toml
claude_agent_course/module_04_skills/projects/project_06_release_notes/samples/: changelog.txt
claude_agent_course/module_04_skills/projects/project_06_release_notes/solution/: output_example.md
claude_agent_course/module_04_skills/projects/project_06_release_notes/src/: __init__.py  agent.py  main.py
claude_agent_course/module_04_skills/projects/project_07_log_redactor/: README.md  pyproject.toml
claude_agent_course/module_04_skills/projects/project_07_log_redactor/solution/: output_example.md
claude_agent_course/module_04_skills/projects/project_07_log_redactor/src/: __init__.py  agent.py  main.py
claude_agent_course/module_05_mcp_protocol/projects/project_01_mcp_note_server/: README.md  pyproject.toml
claude_agent_course/module_05_mcp_protocol/projects/project_01_mcp_note_server/solution/: agent.py  main.py  output_example.md  server.py
claude_agent_course/module_05_mcp_protocol/projects/project_01_mcp_note_server/src/: __init__.py  agent.py  main.py  server.py
claude_agent_course/module_05_mcp_protocol/projects/project_02_mcp_filesystem_agent/: README.md  pyproject.toml
claude_agent_course/module_05_mcp_protocol/projects/project_02_mcp_filesystem_agent/samples/sample_dir/: notes.txt  todo.md
claude_agent_course/module_05_mcp_protocol/projects/project_02_mcp_filesystem_agent/solution/: agent.py  main.py  output_example.md
claude_agent_course/module_05_mcp_protocol/projects/project_02_mcp_filesystem_agent/src/: __init__.py  agent.py  main.py
claude_agent_course/module_06_memory_context/projects/project_01_session_manager/: .env.example  README.md  pyproject.toml
claude_agent_course/module_06_memory_context/projects/project_01_session_manager/solution/: __init__.py  agent.py  main.py  session.py
claude_agent_course/module_06_memory_context/projects/project_01_session_manager/src/: __init__.py  agent.py  main.py  session.py
claude_agent_course/module_06_memory_context/projects/project_02_cached_qa_bot/: README.md  pyproject.toml
claude_agent_course/module_06_memory_context/projects/project_02_cached_qa_bot/data/: sample_doc.md
claude_agent_course/module_06_memory_context/projects/project_03_vector_memory/: README.md  pyproject.toml
claude_agent_course/module_06_memory_context/projects/project_04_context_compressor/: README.md  pyproject.toml
claude_agent_course/module_08_capstone_project/projects/devmate/: .env.example  README.md  pyproject.toml
claude_agent_course/module_08_capstone_project/projects/devmate/src/: __init__.py  main.py
claude_agent_course/module_08_capstone_project/projects/devmate/src/agents/: base.py  engineer.py  orchestrator.py  planner.py
claude_agent_course/module_08_capstone_project/projects/devmate/src/core/: context.py  files.py  shell.py
templates/: .env.example  docs_template_01_概念讲解.md  docs_template_02_代码示例.md  docs_template_03_最佳实践.md  project_README_template.md  pyproject.toml  requirements.txt  src_agent.py  src_main.py  test_agent.py
(+153 files in other folders)
