[project]
name = "project-name"
version = "0.1.0"
description = "Claude Agent SDK 实战项目"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.18.1",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "black>=23.12.1",
    "ruff>=0.1.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"
