[project]
name = "hello-agent"
version = "0.1.0"
description = "你的第一个 Claude Agent"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.18.1",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "black>=23.12.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
