[project]
name = "smart-assistant"
version = "0.1.0"
description = "智能对话助手 - 支持多模式和对话管理"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.18.1",
    "claude-agent-sdk>=0.1.18",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "black>=23.12.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
