[project]
name = "project-03-advanced-agent"
version = "0.1.0"
description = "高级 Agent - 使用 ClaudeSDKClient 实现可中断、可回滚的对话助手"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "claude-agent-sdk>=0.1.0",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src", "solution"]
