[project]
name = "session-manager"
version = "0.1.0"
description = "Session管理器 - Module 6 Project 1"
authors = ["Claude Agent Course"]
requires-python = ">=3.10"
readme = "README.md"

dependencies = [
    "anthropic>=0.39.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
