[project]
name = "cached-qa-bot"
version = "0.1.0"
description = "带缓存的问答机器人 - Module 6 Project 2"
requires-python = ">=3.10"

dependencies = [
    "anthropic>=0.39.0",
    "tiktoken>=0.5.0",
    "python-dotenv>=1.0.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
