[project]
name = "vector-memory"
version = "0.1.0"
description = "向量记忆系统 - Module 6 Project 3"
requires-python = ">=3.10"

dependencies = [
    "anthropic>=0.39.0",
    "chromadb>=0.4.0",
    "sentence-transformers>=2.2.0",
    "python-dotenv>=1.0.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
