[project]
name = "context-compressor"
version = "0.1.0"
description = "上下文压缩器 - Module 6 Project 4"
requires-python = ">=3.10"

dependencies = [
    "anthropic>=0.39.0",
    "tiktoken>=0.5.0",
    "python-dotenv>=1.0.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
